# openai-json

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  pytest.ini  regenerate_docs.sh  requirements.txt  setup.py
.github/workflows/: test-build.yml
docs/: modules.rst  openai_json.rst
docs/source/: conf.py  index.rst  openai_json.rst
examples/: run_wrapper.py
openai_json/: __init__.py  api_interface.py  data_manager.py  heuristic_processor.py  ml_processor.py  openai_json.py  output_assembler.py  schema_handler.py  substructure_manager.py  utils.py  wrapper.py
source/: conf.py  index.rst
tests/: conftest.py  test_api_interface.py  test_heuristic_processor.py  test_ml_processor.py  test_openai_json.py  test_output_assembler.py  test_schema_handler.py  test_substructure_manager.py  test_wrapper.py
tests/integration/: test_openai_json_integration.py  test_openai_json_integration_heuristics.py
tests/unit/: test_api_interface.py  test_data_manager.py  test_heuristic_processor.py  test_ml_processor.py  test_openai_json.py  test_output_assembler.py  test_schema_handler.py  test_substructure_manager.py
