[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-json"
version = "0.1.0"
description = "A Python OpenAI_JSON for processing and structuring JSON responses from the OpenAI API."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shane Vigil", email = "savigil@gmail.com"}
]
keywords = ["openai", "json", "OpenAI_JSON",]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]
linting = ["flake8", "mypy"]

[tool.setuptools.packages.find]
where = ["openai_json"]

[tool.mypy]
files = ["openai_json"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --tb=short"

[tool.flake8]
max-line-length = 88
exclude = ["env", "build", "dist", "__pycache__"]

[project.urls]
homepage = "https://github.com/shanevigil/openai-json"
source = "https://github.com/shanevigil/openai-json"
bug_tracker = "https://github.com/shanevigil/openai-json/issues"
