[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai_json"
version = "1.0.0"
description = "A Python library for processing and structuring JSON responses from the OpenAI API."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shane Vigil", email = "savigil@gmail.com"}
]
keywords = ["openai", "json", "schema", "machine-learning", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]
linting = ["flake8", "mypy"]

[project.urls]
homepage = "https://github.com/shanevigil/openai-json"
source = "https://github.com/shanevigil/openai-json"
bug_tracker = "https://github.com/shanevigil/openai-json/issues"
